    - Builder: Builds ngspice, adms, trilinos and xyce
    - Base: copys from builder, texlive and installs only necessary runtime and python environment
    - full or Version_XX: Includes the latest or respective DMT install
- dmt example bash script which uses the docker container to run a python/dmt script.
- Generating CycloneDX SBOM from the container

### Fixed

- CI Release name

## Deprecated

- DMT.core.naming.set_col_name deprecated as SpecifierStr creation is much better documented.

## [1.6.2] - 2022.06.14

### Fixed

- double entry in the paper bib file.

## [1.6.1] - 2022.06.14

### Fixed

- gitlab CI buildchain

## [1.6.0] - 2022.06.07

### Added

- Issue and pull request templates and better descriptions
- Added more installation help in the documentation
- ngspice now allows SGP BJTs
- use_tex parameter for Plot.plot_py() to turn off LaTeX use

### Changed

- Cleaned setup.py from unneeded dependencies and also introduces extras_require to allow the different optional installations to work properly.
- Choosing PySide2 as plot backend without setting the environment variable. The new way is not blocking other backends, if PySide2 is not installed and the variable is unset.
- Moved Smithplot and Plot2Axis to separate files.

### Fixed

- "bias_val" variable in DutHdev.get_bias_info was unset
- Some possible runtime errors fixed thanks to pylance linting.
- Hdevpy linting errors
- pathlib.Path is always resolved before calling parent. Fixes #5
- pandas setting with copy
- plot siunitx
## Deprecated

- The user DMT configuration file will be moved to `$XDG_CONFIG_HOME/DMT/DMT_config.yaml` for linux and MacOS, with defaulting to `~/.config/DMT/DMT_config.yaml`. For Windows, the new default will be `%LOCALAPPDATA%\DMT\DMT_config.yaml`

## [1.5.0-rc.3] - 2022.04.15

### Added

- added "no ending" to parameter loading in MCard
- Added 3 policies how to handle missing parameters for McParameterCollection.set_values.
- Documentation for M1 mac installation