@@ -15,6 +15,13 @@ The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
 - dmt example bash script which uses the docker container to run a python/dmt script.
 - Generating CycloneDX SBOM from the container
 
+### Changed
+
+- Correct Bibtex to cite for the published paper.
+- format and test stages of the CI pipeline are done for reg-ex "main" (so incl. "pre-main"), the following only for "main"
+- `SpecifierStr.sub_specifiers` are now `frozenset` instead of a list. This fixes the order issue and at the same time improves readability when testing.
+- `SpecifierStr.__contains__` now properly testing containement without the shortcut using string casts.
+
 ### Fixed
 
 - CI Release name
